--- a/londoneye.html
+++ b/londoneye.html
@@ -8,7 +8,7 @@
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./location.css">
-	<title>(Un)Known - London Eye</title>
+	<title>(Un)Known - South Bank</title>
 </head>
 <body>
   <div id="myModal" class="modal">
@@ -38,7 +38,7 @@
   <div id="page_title">
 	<br></br>
 	<br></br>
-  	<h1>London Eye</h1>
+  	<h1>South Bank</h1>
     <h2>All these locations are within 1 mile of London Bridge</h2>
   </div>
   <br></br>
