--- a/londoneye.html
+++ b/londoneye.html
@@ -46,27 +46,23 @@
     <div class="row">
       <div class="col-md-4 col-sm-12">
         <a  href="#myModal" title="Tower Bridge" data-toggle="modal" ><img id="myImg" src="./Images/towerbridge.jpg" alt="Snow" style="width:100%;max-width:300px"></a>
-
-      </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
+        <h2>Southwark Bridge at Night</h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
           <img src="./Images/star.png">
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
-        </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+	</div>
+	<div id="bullet-points">
+		&bull; Views of The Thames lit up at night by the bridge and monuments like the Shard<br/>
+		&bull; Many bars and restaurants<br/>
+		&bull; London skyline lit up<br/>
+	</div>
       </div>
     </div>
   </div>
-  <div class='polaroid-images'>
-    <div class="row">
-      <div class="col-md-4 col-sm-12">
-        <a href="#myModal" title="Tower Bridge" data-toggle="modal" ><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a>
-      </div>
 
       <div class="col-md-6 col-sm-12">
         <h2>Place Name</h2>
@@ -88,7 +84,7 @@
         <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
+        <h2>Site of the original Shakespeare’s Globe Theatre </h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
@@ -96,8 +92,11 @@
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
         </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+      	<div id="bullet-points">
+		&bull; See where Shakespeare’s plays weer hosted in the 1600s<br/>
+		&bull; Plaque on the building marking its history<br/>
+		&bull; Anchor Terrace itself is a Grade II listed building<br/>
+	</div>
       </div>
     </div>
   </div>
@@ -107,7 +106,7 @@
         <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
+        <h2>Guided tour of current Globe Theatre</h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
@@ -115,8 +114,12 @@
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
         </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+    	<div id="bullet-points">
+		&bull; Experts guide you through the history of both the Shakespearean and modern Globe theatres, the building itself and renovation<br/>
+		&bull; Tours are in English but there are complementary sheets in French, German, Spanish, Italian, Russian, Simplified Chinese and Japanese<br/>
+		&bull; Tours take 40 minutes<br/>
+		&bull; Audioguide is included and is available in English, French, German, Spanish, Italian, Russian, Mandarin and Japanese. Equivalent video content is available in British Sign Language with English subtitles.<br/>
+	</div>
       </div>
     </div>
   </div>
