--- a/towerbridge.html
+++ b/towerbridge.html
@@ -45,7 +45,7 @@
 <div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <a  href="#myModal" title="Tower Bridge" data-toggle="modal" ><img id="myImg" src="./Images/towerbridge.jpg" alt="Snow" style="width:100%;max-width:300px"></a>
+        <a  href="#myModal" title="Hays Galeria" data-toggle="modal" ><img id="myImg" src="./Images/towerbridge.jpg" alt="Snow" style="width:100%;max-width:300px"></a>
       </div>
       <div class="col-md-6 col-sm-12">
         <h2>Hays Galeria</h2>
@@ -70,7 +70,7 @@
   <div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <a href="#myModal" title="Tower Bridge" data-toggle="modal" ><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a>
+        <a href="#myModal" title="Science Gallery" data-toggle="modal" ><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a>
       </div>
 
       <div class="col-md-6 col-sm-12">
@@ -93,7 +93,7 @@
   <div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+        <a href="#" title="London Glassblowing"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
         <h2>London Glassblowing</h2>
