--- a/londoneye.html
+++ b/londoneye.html
@@ -45,11 +45,11 @@
 	<div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+        <a href="#" title="Southwark Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Guided tour of current Globe Theatre</h2>
-        <h3>Distance from Tower Bridge</h3>
+        <h2>Southwark Bridge at Night</h2>
+        <h3>Distance from Southbank</h3>
         <div class="stars">
           <img src="./Images/star.png">
           <img src="./Images/star.png">
@@ -57,10 +57,9 @@
           <p>(67 Reviews)</p>
         </div>
     	<div id="bullet-points">
-		&bull; Experts guide you through the history of both the Shakespearean and modern Globe theatres, the building itself and renovation<br/>
-		&bull; Tours are in English but there are complementary sheets in French, German, Spanish, Italian, Russian, Simplified Chinese and Japanese<br/>
-		&bull; Tours take 40 minutes<br/>
-		&bull; Audioguide is included and is available in English, French, German, Spanish, Italian, Russian, Mandarin and Japanese. Equivalent video content is available in British Sign Language with English subtitles.<br/>
+		&bull; Views of The Thames lit up at night by the bridge and monuments like the Shard<br/>
+		&bull; Many bars and restaurants<br/>
+		&bull; London skyline lit up<br/>
 	</div>
       </div>
     </div>
@@ -68,10 +67,10 @@
   <div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+        <a href="#" title="Globe Theatre"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Guided tour of current Globe Theatre</h2>
+        <h2>Site of the Original Globe Theatre</h2>
         <h3>Distance from Tower Bridge</h3>
         <div class="stars">
           <img src="./Images/star.png">
@@ -80,10 +79,9 @@
           <p>(67 Reviews)</p>
         </div>
     	<div id="bullet-points">
-		&bull; Experts guide you through the history of both the Shakespearean and modern Globe theatres, the building itself and renovation<br/>
-		&bull; Tours are in English but there are complementary sheets in French, German, Spanish, Italian, Russian, Simplified Chinese and Japanese<br/>
-		&bull; Tours take 40 minutes<br/>
-		&bull; Audioguide is included and is available in English, French, German, Spanish, Italian, Russian, Mandarin and Japanese. Equivalent video content is available in British Sign Language with English subtitles.<br/>
+		&bull; See where Shakespeare’s plays weer hosted in the 1600s<br/>
+		&bull; Plaque on the building marking its history<br/>
+		&bull; Anchor Terrace itself is a Grade II listed building<br/>
 	</div>
       </div>
     </div>
