--- a/canarywharf.html
+++ b/canarywharf.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -26,13 +25,13 @@
 	    </div >
 	    <ul class="nav navbar-nav">
 <!-- 	      <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
-	      <li class="icon"><a href="londoneye.html"><img src="./Images/london-eye (1).png"><br>South Bank</a></li>
+	      <li class="icon"><a href="londoneye.html"><img src="./Images/london-eye (1).png"><br>London Eye</a></li>
 	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
 	      <li class="icon"><a href="hydepark.html"><img src="./Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
 	      <li class="icon"><a href="canarywharf.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
-	      <li class="icon"><a href="soho.html"><img src="./Images/icons8-musical-notes-32.png"><br>Leicester Square</a></li>
+	      <li class="icon"><a href="soho.html"><img src="./Images/icons8-musical-notes-32.png"><br>Soho</a></li>
 	      <li class="icon"><a href="rooftops.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
-	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
+	      <li class="icon"><a href="./API/templates/signup.html"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
 	    </ul>
 	  </div>
 	</nav>
@@ -40,7 +39,7 @@
 	<br></br>
 	<br></br>
   	<h1>Canary Wharf</h1>
-    <h2>All these locations are within 1 mile of London Bridge</h2>
+    <h2>All these locations are within 1 mile of Canary Wharf</h2>
   </div>
   <br></br>
 	<div class='polaroid-images'>
@@ -50,16 +49,45 @@
 
       </div>
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
-        <h3>Distance from Tower Bridge</h3>
-        <div class="stars">
+        <h2>Giant Robot</h2>
+        <h3>Distance from Canary Wharf: 0.1 miles</h3>
+<!--         <div class="stars">
           <img src="./Images/star.png">
           <img src="./Images/star.png">
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
-        </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+        </div> -->
+        <p>
+        <ul>
+          <li>A seven-day-a-week food arena right on the rooftop of the Crossrail brought to you by Shoreditch very own Dinerama</li>
+          <li>Whether you're in the need for afterwork drinks or a crazy street feast this place has it all</li>
+          <li>Retro furniture and tunes to make you feel you're back at a nightclub, the vibe is alway on point</li>
+        </ul>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class='polaroid-images'>
+    <div class="row">
+      <div class="col-md-4 col-sm-12">
+        <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <h2>The Grapes</h2>
+        <h3>Distance from Canary Wharf: 0.6 miles</h3>
+<!--         <div class="stars">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <p>(67 Reviews)</p>
+        </div> -->
+       <p>
+        <ul>
+          <li>Dating all the way back to 1583, what may appear as your average pub hides the biggest secret to it all, as this Victorian pub is owned by the one and only Sir Ian McKellan  </li>
+          <li>The Grapes is even more unique as it appears, scarcely disguised, in the opening chapter of Charles Dicken's novel “Our Mutual Friend”, who knew Limehouse well for over 40 years</li>
+          <li>Above it all, the Grapes provide the perfect view as you step on to their back porch and gaze along the Thames and the London skyline</li>
+        </ul>
+        </p>
       </div>
     </div>
   </div>
@@ -70,59 +98,25 @@
       </div>
 
       <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
-        <h3>Distance from Tower Bridge</h3>
-        <div class="stars">
+        <h2>Crossrail Rooftop Garden</h2>
+        <h3>Distance from Canary Wharf: 0.1 miles</h3>
+<!--         <div class="stars">
           <img src="./Images/star.png">
           <img src="./Images/star.png">
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
-        </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
+        </div> -->
+        <p>
+        <ul>
+          <li>A hidden gem surrounded by Canary Wharf skyscrappers, the newly built crossrail beholds this enchanted rooftop garden</li>
+          <li>A 300 metres enclosed garden with an abundance of exotic plants and trees, perfect for you to escape that city life right at the very heart of canary wharf</li>
+          <li>Get the chance to see a variety of live music and performances</li>
+        </ul>
+        </p>
       </div>
     </div>
-  </div>
-  <div class='polaroid-images'>
-    <div class="row">
-      <div class="col-md-4 col-sm-12">
-        <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
-      </div>
-      <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
-        <h3>Distance from Tower Bridge</h3>
-        <div class="stars">
-          <img src="./Images/star.png">
-          <img src="./Images/star.png">
-          <img src="./Images/star.png">
-          <p>(67 Reviews)</p>
-        </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
-      </div>
-    </div>
-  </div>
-  <div class='polaroid-images'>
-    <div class="row">
-      <div class="col-md-4 col-sm-12">
-        <a href="#" title="Tower Bridge"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
-      </div>
-      <div class="col-md-6 col-sm-12">
-        <h2>Place Name</h2>
-        <h3>Distance from Tower Bridge</h3>
-        <div class="stars">
-          <img src="./Images/star.png">
-          <img src="./Images/star.png">
-          <img src="./Images/star.png">
-          <p>(67 Reviews)</p>
-        </div>
-        <p>Brief description of the place
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et mauris sit amet tortor congue porttitor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque consectetur molestie laoreet. Integer ac orci eros. Curabitur hendrerit dapibus orci at convallis.</p>
-      </div>
-    </div>
-  </div>
-
-  </div>
+  </div>  
+</div>
   
 
   
