--- a/rooftops.html
+++ b/rooftops.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -26,13 +25,13 @@
 	    </div >
 	    <ul class="nav navbar-nav">
 <!-- 	      <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
-	      <li class="icon"><a href="londoneye.html"><img src="./Images/london-eye (1).png"><br>South Bank</a></li>
+	      <li class="icon"><a href="londoneye.html"><img src="./Images/london-eye (1).png"><br>London Eye</a></li>
 	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
 	      <li class="icon"><a href="hydepark.html"><img src="./Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
 	      <li class="icon"><a href="canarywharf.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
-	      <li class="icon"><a href="soho.html"><img src="./Images/icons8-musical-notes-32.png"><br>Leicester Square</a></li>
+	      <li class="icon"><a href="soho.html"><img src="./Images/icons8-musical-notes-32.png"><br>Soho</a></li>
 	      <li class="icon"><a href="rooftops.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
-	      <li class="icon"><a href="(Un)Known.html#Signup"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
+	      <li class="icon"><a href="./API/templates/signup.html"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
 	    </ul>
 	  </div>
 	</nav>
@@ -66,7 +65,7 @@
   <div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <a href="#myModal" title="Tower Bridge" data-toggle="modal" ><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a>
+        <a href="#myModal" title="Netil 360" data-toggle="modal" ><img height="200" src='./Images/londonfields.jpg' alt="Tower Bridge" title="Tower Bridge" /></a>
       </div>
 
       <div class="col-md-6 col-sm-12">
