Updating canary wharf pictures

--- a/canarywharf.html
+++ b/canarywharf.html
@@ -45,7 +45,7 @@
 	<div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <a  href="#myModal" title="Giant Robot" data-toggle="modal" ><img id="myImg" src="./Images/towerbridge.jpg" alt="Snow" style="width:100%;max-width:300px"></a>
+        <a  href="#myModal" title="Giant Robot" data-toggle="modal" ><img id="myImg" src="./Images/Giantrobot.jpg" alt="Snow" style="width:100%;max-width:300px"></a>
 
       </div>
       <div class="col-md-6 col-sm-12">
@@ -70,7 +70,7 @@
   <div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <a href="#" title="The Grapes"><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+        <a href="#" title="The Grapes"><img height="200" src='./Images/thegrapes.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
         <h2>The Grapes</h2>
@@ -94,7 +94,7 @@
   <div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <a href="#myModal" title="Crossrail Garden" data-toggle="modal" ><img height="200" src='./Images/towerbridge.jpg' alt="Tower Bridge" title="Tower Bridge" /></a>
+        <a href="#myModal" title="Crossrail Garden" data-toggle="modal" ><img height="200" src='./Images/crossrailrooftop.jpg' alt="Tower Bridge" title="Tower Bridge" /></a>
       </div>
 
       <div class="col-md-6 col-sm-12">
