update crossrail garden comments

--- a/canarywharf.html
+++ b/canarywharf.html
@@ -108,9 +108,9 @@
         </div> -->
         <p>
         <ul>
-          <li>A hidden gem surrounded by Canary Wharf skyscrappers, the newly built crossrail beholds this enchanted rooftop garden</li>
+          <li>A hidden gem surrounded by skyscrappers, as the newly built Crossrail beholds this enchanted rooftop garden at the heart of Canary Wharf</li>
           <li>A 300 metres enclosed garden with an abundance of exotic plants and trees, perfect for you to escape that city life right at the very heart of canary wharf</li>
-          <li>Get the chance to see a variety of live music and performances</li>
+          <li>Get the chance to see a variety of live music and performances whilst there</li>
         </ul>
         </p>
       </div>
