added rooftop pics

--- a/rooftops.html
+++ b/rooftops.html
@@ -70,7 +70,7 @@
   <div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <a href="#myModal" title="Coq D'Argent" data-toggle="modal" ><img height="200" src='./Images/londonfields.jpg' alt="Tower Bridge" title="Tower Bridge" /></a>
+        <a href="#myModal" title="Coq D'Argent" data-toggle="modal" ><img height="200" src='./Images/rob-bye-614653-unsplash.jpg' alt="Tower Bridge" title="Tower Bridge" /></a>
       </div>
 
       <div class="col-md-6 col-sm-12">
@@ -119,7 +119,7 @@
   <div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <a href="#" title="Queen Elizabeth Roof Garden"><img height="200" src='./Images/londonfields.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+        <a href="#" title="Queen Elizabeth"><img height="200" src='./Images/agriculture-benches-blue-736782.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
         <h2>Queen Elizabeth Hall Roof Garden</h2>
@@ -147,3 +147,4 @@
   
 </body>
 </html>
+
