adding rooftop pics

--- a/rooftops.html
+++ b/rooftops.html
@@ -95,7 +95,7 @@
   <div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <a href="#" title="Sushi Samba"><img height="200" src='./Images/londonfields.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+        <a href="#" title="Sushi Samba"><img height="200" src='./Images/downtown-london-england_4460x4460.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
       </div>
       <div class="col-md-6 col-sm-12">
         <h2>Sushi Samba</h2>
