--- a/canarywharf.html
+++ b/canarywharf.html
@@ -6,43 +6,43 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="./location.css">
-	<title>(Un)Known - Canary Wharf</title>
+  <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./location.css">
+  <title>(Un)Known - Canary Wharf</title>
 </head>
 <body>
   <div id="myModal" class="modal">
     <span class="close" data-dismiss="modal">&times;</span>
-    <img class="modal-content" src="./Images/towerbridge.jpg" id="img01">
+    <img class="modal-content" src="./Images/Giantrobot.jpg" id="img01">
     <div id="caption"></div>
   </div>
   
 
  <nav class="navbar-inverse navbar-fixed-top">
-	  <div class="container-fluid mx-auto">
-	    <div class="navbar-header">
-	      <a class="active navbar-brand " href="index.html">(Un)Known</a>
-	    </div >
-	    <ul class="nav navbar-nav">
-<!-- 	      <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
-	      <li class="icon"><a href="londoneye.html"><img src="./Images/london-eye (1).png"><br>London Eye</a></li>
-	      <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
-	      <li class="icon"><a href="hydepark.html"><img src="./Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
-	      <li class="icon"><a href="canarywharf.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
-	      <li class="icon"><a href="soho.html"><img src="./Images/icons8-musical-notes-32.png"><br>Soho</a></li>
-	      <li class="icon"><a href="rooftops.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
-	      <li class="icon"><a href="./API/templates/signup.html"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
-	    </ul>
-	  </div>
-	</nav>
+    <div class="container-fluid mx-auto">
+      <div class="navbar-header">
+        <a class="active navbar-brand " href="index.html">(Un)Known</a>
+      </div >
+      <ul class="nav navbar-nav">
+<!--        <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
+        <li class="icon"><a href="londoneye.html"><img src="./Images/london-eye (1).png"><br>London Eye</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
+        <li class="icon"><a href="hydepark.html"><img src="./Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
+        <li class="icon"><a href="canarywharf.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
+        <li class="icon"><a href="soho.html"><img src="./Images/icons8-musical-notes-32.png"><br>Soho</a></li>
+        <li class="icon"><a href="rooftops.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
+        <li class="icon"><a href="./API/templates/signup.html"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
+      </ul>
+    </div>
+  </nav>
   <div id="page_title">
-	<br></br>
-	<br></br>
-  	<h1>Canary Wharf</h1>
+  <br></br>
+  <br></br>
+    <h1>Canary Wharf</h1>
     <h2>All these locations are within 1 mile of Canary Wharf</h2>
   </div>
   <br></br>
-	<div class='polaroid-images'>
+  <div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
         <a  href="#myModal" title="Giant Robot" data-toggle="modal" ><img id="myImg" src="./Images/Giantrobot.jpg" alt="Snow" style="width:100%;max-width:300px"></a>
@@ -51,12 +51,6 @@
       <div class="col-md-6 col-sm-12">
         <h2>Giant Robot</h2>
         <h3>Distance from Canary Wharf: 0.1 miles</h3>
-<!--         <div class="stars">
-          <img src="./Images/star.png">
-          <img src="./Images/star.png">
-          <img src="./Images/star.png">
-          <p>(67 Reviews)</p>
-        </div> -->
         <p>
         <ul>
           <li>A seven-day-a-week food arena right on the rooftop of the Crossrail brought to you by Shoreditch very own Dinerama</li>
@@ -64,30 +58,12 @@
           <li>Retro furniture and tunes to make you feel you're back at a nightclub, the vibe is alway on point</li>
         </ul>
         </p>
-      </div>
-    </div>
-  </div>
-  <div class='polaroid-images'>
-    <div class="row">
-      <div class="col-md-4 col-sm-12">
-        <a href="#" title="The Grapes"><img height="200" src='./Images/thegrapes.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
-      </div>
-      <div class="col-md-6 col-sm-12">
-        <h2>The Grapes</h2>
-        <h3>Distance from Canary Wharf: 0.6 miles</h3>
-<!--         <div class="stars">
+        <div class="stars">
           <img src="./Images/star.png">
           <img src="./Images/star.png">
           <img src="./Images/star.png">
           <p>(67 Reviews)</p>
-        </div> -->
-       <p>
-        <ul>
-          <li>Dating all the way back to 1583, what may appear as your average pub hides the biggest secret to it all, as this Victorian pub is owned by the one and only Sir Ian McKellan  </li>
-          <li>The Grapes is even more unique as it appears, scarcely disguised, in the opening chapter of Charles Dicken's novel “Our Mutual Friend”, who knew Limehouse well for over 40 years</li>
-          <li>Above it all, the Grapes provide the perfect view as you step on to their back porch and gaze along the Thames and the London skyline</li>
-        </ul>
-        </p>
+        </div>
       </div>
     </div>
   </div>
@@ -100,12 +76,6 @@
       <div class="col-md-6 col-sm-12">
         <h2>Crossrail Rooftop Garden</h2>
         <h3>Distance from Canary Wharf: 0.1 miles</h3>
-<!--         <div class="stars">
-          <img src="./Images/star.png">
-          <img src="./Images/star.png">
-          <img src="./Images/star.png">
-          <p>(67 Reviews)</p>
-        </div> -->
         <p>
         <ul>
           <li>A hidden gem surrounded by skyscrappers, as the newly built Crossrail beholds this enchanted rooftop garden at the heart of Canary Wharf</li>
@@ -113,13 +83,42 @@
           <li>Get the chance to see a variety of live music and performances whilst there</li>
         </ul>
         </p>
+        <div class="stars">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <p>(67 Reviews)</p>
+        </div>
       </div>
     </div>
   </div>  
+  <div class='polaroid-images'>
+    <div class="row">
+      <div class="col-md-4 col-sm-12">
+        <a href="#" title="The Grapes"><img height="200" src='./Images/thegrapes.jpg' alt="Tower Bridge" title="Tower Bridge" /></a></td>
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <h2>The Grapes</h2>
+        <h3>Distance from Canary Wharf: 0.6 miles</h3>
+       <p>
+        <ul>
+          <li>Dating all the way back to 1583, what may appear as your average pub hides the biggest secret to it all, as this Victorian pub is owned by the one and only Sir Ian McKellan  </li>
+          <li>The Grapes is even more unique as it appears, scarcely disguised, in the opening chapter of Charles Dicken's novel “Our Mutual Friend”, who knew Limehouse well for over 40 years</li>
+          <li>Above it all, the Grapes provide the perfect view as you step on to their back porch and gaze along the Thames and the London skyline</li>
+        </ul>
+        </p>
+        <div class="stars">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <img src="./Images/star.png">
+          <p>(67 Reviews)</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
   
 
   
 </body>
 </html>
-
