added location comments

--- a/rooftops.html
+++ b/rooftops.html
@@ -29,7 +29,7 @@
         <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
         <li class="icon"><a href="hydepark.html"><img src="./Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
         <li class="icon"><a href="canarywharf.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
-        <li class="icon"><a href="soho.html"><img src="./Images/icons8-musical-notes-32.png"><br>Soho</a></li>
+        <li class="icon"><a href="soho.html"><img src="./Images/icons8-musical-notes-32.png"><br>Leicester Square</a></li>
         <li class="icon"><a href="rooftops.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
         <li class="icon"><a href="./API/templates/signup.html"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
       </ul>
@@ -53,9 +53,9 @@
         <h3>Distance from London Fields: 0.2 miles</h3>
         <p>
         <ul>
-          <li>A hidden gem surrounded by skyscrappers, the newly built Crossrail beholds this enchanted rooftop garden </li>
-          <li>A 300 metres enclosed garden with an abundance of exotic plants and trees, perfect for you to escape that city life right at the very heart of canary wharf</li>
-          <li>Get the chance to see a variety of live music and performances whilst there</li>
+          <li>Cosy, laid back rooftop just a stone throw away from Broadway Market</li>
+          <li>Unlike other rooftops, Netil 360 provides a workspace with great views during the day, turning into a nightclub at dark, as it hosts live DJ sets</li>
+          <li>Experience a panoramic view of London</li>
         </ul>
         </p>
         <div class="stars">
@@ -70,17 +70,16 @@
   <div class='polaroid-images'>
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <a href="#myModal" title="Coq D'Argent" data-toggle="modal" ><img height="200" src='./Images/rob-bye-614653-unsplash.jpg' alt="Tower Bridge" title="Tower Bridge" /></a>
+        <a href="#myModal" title="Coq d'Argent" data-toggle="modal" ><img height="200" src='./Images/rob-bye-614653-unsplash.jpg' alt="Tower Bridge" title="Tower Bridge" /></a>
       </div>
 
       <div class="col-md-6 col-sm-12">
-        <h2>Coq D'Argent</h2>
+        <h2>Coq d'Argent</h2>
         <h3>Distance from Bank: 0.1 miles</h3>
         <p>
         <ul>
-          <li>A hidden gem surrounded by skyscrappers, the newly built Crossrail beholds this enchanted rooftop garden </li>
-          <li>A 300 metres enclosed garden with an abundance of exotic plants and trees, perfect for you to escape that city life right at the very heart of canary wharf</li>
-          <li>Get the chance to see a variety of live music and performances whilst there</li>
+          <li>Great place for afterwork drinks with a view of the Bank of England and city skyscrappers</li>
+          <li>A French brasserie with a heated rooftop garden serving food and cocktails whether its day or night</li>
         </ul>
         </p>
         <div class="stars">
@@ -102,9 +101,9 @@
         <h3>Distance from Liverpool Street: 0.1 miles</h3>
         <p>
         <ul>
-          <li>A hidden gem surrounded by skyscrappers, the newly built Crossrail beholds this enchanted rooftop garden </li>
-          <li>A 300 metres enclosed garden with an abundance of exotic plants and trees, perfect for you to escape that city life right at the very heart of canary wharf</li>
-          <li>Get the chance to see a variety of live music and performances whilst there</li>
+          <li>Experience views from the 38th floor of Heron Tower</li>
+          <li>Sushi samba not only provides great views but satisfies everyones craving, whether you're in the mood for Peruvian, Brazilian or even Japanese</li>
+          <li>It’s fusion cuisine like you’ve never had before!</li>
         </ul>
         </p>
         <div class="stars">
@@ -125,9 +124,8 @@
         <h2>Queen Elizabeth Hall Roof Garden</h2>
         <h3>Distance from Waterloo: 0.1 miles</h3>
         <ul>
-          <li>A hidden gem surrounded by skyscrappers, the newly built Crossrail beholds this enchanted rooftop garden </li>
-          <li>A 300 metres enclosed garden with an abundance of exotic plants and trees, perfect for you to escape that city life right at the very heart of canary wharf</li>
-          <li>Get the chance to see a variety of live music and performances whilst there</li>
+          <li>A rooftop view of the Thames river and key attractions like Westminster or London Eye</li>
+          <li>Perfect place to go to with your family for a picnic</li>
         </ul>
         </p>
         <div class="stars">
