formatting location game

--- a/loginhomepage.html
+++ b/loginhomepage.html
@@ -95,9 +95,9 @@
     <div id="locationgame" >
       <form method="post" action="#"> <!-- need to add link to location game when submit is clicked on -->
         <p>Locations: South Bank, Hyde Park, Tower Bridge, Canary Wharf, Leicester Square, Rooftops:</p></br>
-        <label for="text">Choose a location from the above:</label></br>
-        <input type="text" id="" name="londonlocation" required="required">
-        <input type="submit" value="Submit" id="submit"/>
+        <label for="text">Choose a location from the above:</label></form><br>
+        <input type="text" id="locationinput" name="londonlocation" required="required">
+        <input type="submit" value="Submit" id="locationsubmit"/>
       </form>
     </div>
   </div>
