linking form to location python file

--- a/loginhomepage.html
+++ b/loginhomepage.html
@@ -93,7 +93,7 @@
     <h2>Welcome back to the (Un)Known!</h2></br></br>
     <p>Go Crazy and try out our random location selector below</p></br>
     <div id="locationgame" >
-      <form method="post" action="#"> <!-- need to add link to location game when submit is clicked on -->
+      <form method="post" action="/locgame"> <!-- need to add link to location game when submit is clicked on -->
         <p>Locations: South Bank, Hyde Park, Tower Bridge, Canary Wharf, Leicester Square, Rooftops:</p></br>
         <label for="text">Choose a location from the above:</label></form><br>
         <input type="text" id="locationinput" name="londonlocation" required="required">
