--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
   	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-	<link href="../static/signup.css" rel="stylesheet"">
+	<link href="signup.css" rel="stylesheet"">
   	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -14,8 +14,6 @@
   	
   
   	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-<!-- <link rel="stylesheet" type="text/css" href="./location.css"> -->
-
 	<title>(Un)Known - SignUp</title>
 </head>
 <body>
