--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
 	<nav class="navbar-inverse navbar-fixed-top">
     <div class="container-fluid mx-auto">
       <div class="navbar-header">
-        <a class="active navbar-brand " href="../../index.html">(Un)Known</a>
+        <a class="active navbar-brand " href="index.html">(Un)Known</a>
       </div >
       <ul class="nav navbar-nav">
 <!--        <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
