--- a/canarywharf.html
+++ b/canarywharf.html
@@ -31,7 +31,7 @@
         <li class="icon"><a href="canarywharf.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
         <li class="icon"><a href="soho.html"><img src="./Images/icons8-musical-notes-32.png"><br>Leicester Square</a></li>
         <li class="icon"><a href="rooftops.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
-        <li class="icon"><a href="./API/templates/signup.html"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
+        <li class="icon"><a href="signup.html"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
       </ul>
     </div>
   </nav>
