--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-	<link href="Homepage.css" rel="stylesheet"">
+	<link href="../static/Homepage.css" rel="stylesheet"">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -24,13 +24,13 @@
       </div >
       <ul class="nav navbar-nav">
 <!--        <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
-        <li class="icon"><a href="londoneye.html"><img src="./Images/london-eye (1).png"><br>South Bank</a></li>
-        <li class="icon"><a href="towerbridge.html"><img src="./Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
-        <li class="icon"><a href="hydepark.html"><img src="./Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
-        <li class="icon"><a href="canarywharf.html"><img src="./Images/icons8-city-100.png"><br>Canary Wharf</a></li>
-        <li class="icon"><a href="soho.html"><img src="./Images/icons8-musical-notes-32.png"><br>Leicester Square</a></li>
-        <li class="icon"><a href="rooftops.html"><img src="./Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
-        <li class="icon"><a href="signup.html"><img src="./Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
+        <li class="icon"><a href="londoneye.html"><img src="../static/Images/london-eye (1).png"><br>South Bank</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="../static/Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
+        <li class="icon"><a href="hydepark.html"><img src="../static/Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
+        <li class="icon"><a href="canarywharf.html"><img src="../static/Images/icons8-city-100.png"><br>Canary Wharf</a></li>
+        <li class="icon"><a href="soho.html"><img src="../static/Images/icons8-musical-notes-32.png"><br>Leicester Square</a></li>
+        <li class="icon"><a href="rooftops.html"><img src="../static/Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
+        <li class="icon"><a href="../API/templates/signup.html"><img src="../static/Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
       </ul>
     </div>
   </nav>
@@ -54,21 +54,21 @@
 			  <!-- Wrapper for slides -->
 			  <div class="carousel-inner">
 			    <div class="item active">
-			      <img src="./Images/aerial-view-ancient-architecture-672532.jpg" alt="Big Ben">
+			      <img src="../static//Images/aerial-view-ancient-architecture-672532.jpg" alt="Big Ben">
 			      <div class="carousel-caption">
 			        <h3>Big Ben</h3>
 			        <p>Always so much fun!</p>
 			      </div>
 			    </div>
 			    <div class="item">
-			      <img src="./Images/adults-airport-architectural-design-301930.jpg" alt="Sky Garden">
+			      <img src="../static//Images/adults-airport-architectural-design-301930.jpg" alt="Sky Garden">
 			      <div class="carousel-caption">
 			        <h3>Sky Garden</h3>
 			        <p>So surreal!</p>
 			      </div>
 			    </div>
 			    <div class="item">
-			      <img src="./Images/advertisements-building-cars-34639.jpg" alt="Piccadilly Circus">
+			      <img src="../static//Images/advertisements-building-cars-34639.jpg" alt="Piccadilly Circus">
 			      <div class="carousel-caption">
 			        <h3>Piccadilly Circus</h3>
 			        <p>The big apple of London!</p>
@@ -95,7 +95,7 @@
         <div class="panel-body">
           <div class="row">
             <div class="col-lg-12">
-              <form id="login-form" action="loginhomepage.html" method="post" role="form" style="display: block;">
+              <form id="login-form" action="locationgame/templates/loginhomepage.html" method="post" role="form" style="display: block;">
                 <h2>LOGIN</h2>
                   <div class="form-group">
                     <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
