--- a/emailsent.html
+++ b/emailsent.html
@@ -22,24 +22,24 @@
 	<nav class="navbar-inverse navbar-fixed-top">
     <div class="container-fluid mx-auto">
       <div class="navbar-header">
-        <a class="active navbar-brand " href="../../index.html">(Un)Known</a>
+        <a class="active navbar-brand " href="index.html">(Un)Known</a>
       </div >
       <ul class="nav navbar-nav">
 <!--        <li class="active"><a href="index.html"><img src="UnKnownPics/icons8-london-cab-64.png"><br>Home</a></li> -->
-        <li class="icon"><a href="../../londoneye.html"><img src="../../Images/london-eye (1).png"><br>London Eye</a></li>
-        <li class="icon"><a href="../../towerbridge.html"><img src="../../Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
-        <li class="icon"><a href="../../hydepark.html"><img src="../../Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
-        <li class="icon"><a href="../../canarywharf.html"><img src="../../Images/icons8-city-100.png"><br>Canary Wharf</a></li>
-        <li class="icon"><a href="../../soho.html"><img src="../../Images/icons8-musical-notes-32.png"><br>Leicester Square</a></li>
-        <li class="icon"><a href="../../rooftops.html"><img src="../../Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
-        <li class="icon"><a href="signup.html"><img src="../../Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
+        <li class="icon"><a href="londoneye.html"><img src="../static/Images/london-eye (1).png"><br>South Bank</a></li>
+        <li class="icon"><a href="towerbridge.html"><img src="../static/Images/icons8-bridge-40.png"><br>Tower Bridge</a></li>
+        <li class="icon"><a href="hydepark.html"><img src="../static/Images/icons8-lettuce-48-2.png"><br>Hyde Park</a></li>
+        <li class="icon"><a href="canarywharf.html"><img src="../static/Images/icons8-city-100.png"><br>Canary Wharf</a></li>
+        <li class="icon"><a href="soho.html"><img src="../static/Images/icons8-musical-notes-32.png"><br>Leicester Square</a></li>
+        <li class="icon"><a href="rooftops.html"><img src="../static/Images/icons8-cocktail-50.png"><br>Rooftops</a></li>
+        <li class="icon"><a href="signup.html"><img src="../static/Images/icons8-sign-up-50.png"><br>Sign Up</a></li>
       </ul>
     </div>
   </nav>
 	
 <section id='section03' Class= 'demo'>
   <div class="emailsent">
-  <h2>Welcome to the (Un)Known!</h2>
+  <h2>Welcome to the (Un)Known {{username}}!</h2>
   </div>
 </section>
 </body>
